--- a/clase1/index.html
+++ b/clase1/index.html
@@ -23,6 +23,7 @@
                 <li>Producto 4</li>
                 <li>Producto 5</li>
                 <li>Producto 6</li>
+                <li>Verificacion de Commit y push con cambio de producto en lista</li>
             </ol>
         </div>
 
