cambio de productos

--- a/clase1/index.html
+++ b/clase1/index.html
@@ -24,6 +24,7 @@
                 <li>Producto 5</li>
                 <li>Producto 6</li>
                 <li>Verificacion de Commit y push con cambio de producto en lista</li>
+                <li>Otro Cambio</li>
             </ol>
         </div>
 
