--- a/clase1/index.html
+++ b/clase1/index.html
@@ -10,7 +10,7 @@
         <h1>Titulo</h1>
         <br>
         <p>Este es un parrafo</p>
-        <a href="https://www.infobae.com.ar">Ir a PSAG</a>
+        <a href="https://www.infobae.com.ar">Ir a Infobae</a>
         <img src="https://www.infobae.com/pf/resources/images/logo_infobae_naranja.svg?d=3089">
 
         
