--- a/clase1/index.html
+++ b/clase1/index.html
@@ -13,7 +13,7 @@
         <a href="https://www.infobae.com.ar">Ir a Infobae</a>
         <img src="https://www.infobae.com/pf/resources/images/logo_infobae_naranja.svg?d=3089">
 
-        
+        <!---aca va un comentario de prueba -->
         <div>
             <h6>PRODUCTOS</h6> 
             <ol>
