Cambio de nombre web formularioPrueba

--- a/clase1/index.html
+++ b/clase1/index.html
@@ -58,7 +58,7 @@
     
     
         </table>
-        <a href="./prueba.html">Ir a Formulario</a>
+        <a href="./formularioPrueba.html">Ir a Formulario</a>
 
 
 
