--- a/clase1/formularioPrueba.html
+++ b/clase1/formularioPrueba.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
+    <section Class="Seccion">
+        
         <h1>Prueba de Formulario de envio</h1>
-     <form action="" method="">
+        <form action="" method="">
         <label for= "Nombre"></label> Nombre:</label>
         <input  type="text" name="Nombre" id="Nombre" required>
         <br>
