--- a/clase1/index.html
+++ b/clase1/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Prueba de catalogo</title>    
-    
+        <link rel="stylesheet" href="/clase1/Style/estilo.css">
+        
     </head>
     <body>
         <header>        </header>
@@ -17,14 +18,14 @@
         <div>
             <h6>PRODUCTOS</h6> 
             <ol>
-                <li>Producto 1</li>
-                <li>Producto 2</li>
-                <li>Producto 3</li>
-                <li>Producto 4</li>
-                <li>Producto 5</li>
-                <li>Producto 6</li>
-                <li>Verificacion de Commit y push con cambio de producto en lista</li>
-                <li>Otro Cambio</li>
+                <li class="prueba">Producto 1</li>
+                <li class="prueba">Producto 2</li>
+                <li class="prueba">Producto 3</li>
+                <li >Producto 4</li>
+                <li class="prueba">Producto 5</li>
+                <li class="prueba">Producto 6</li>
+                <li >Verificacion de Commit y push con cambio de producto en lista</li>
+                <li class="prueba">Otro Cambio</li>
             </ol>
         </div>
 
