modificacion img por error

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -13,7 +13,7 @@
         <article ID="productos-psag">
           <p id="descripcion-prod">Rollo Felpita x 6 Extra suave</p>
           
-          <img src="/Proyecto/img/prods/1.jpeg" alt="No se puede mostrar la imagen"> -->
+          <img src="/Proyecto/img/prods/1.jpg" alt="No se puede mostrar la imagen">
         </article>
 
     </main>
