creacion de form con imputs y alineacion a la derecha de logo

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -9,8 +9,18 @@
 
     </head>
     <body>
+        <img style=" float:right;" src="./img/prods/felpitalogo.jpeg">
         <div>
-            
+            <form class="carga-pedidos" method="post" autocomplete="on">
+                <label>Numero de cliente: <input></label>
+                <br>
+                <br>
+                <label>Direccion de entrega: <input></label>
+                <br>
+                <br>
+                <label>Fecha de carga: <input type="date"></label>
+
+            </form>
         </div>
 
 
