Se agregaron campos al form

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -12,13 +12,26 @@
         <img style=" float:right;" src="./img/prods/felpitalogo.jpeg">
         <div>
             <form class="carga-pedidos" method="post" autocomplete="on">
-                <label>Numero de cliente: <input></label>
-                <br>
-                <br>
-                <label>Direccion de entrega: <input></label>
+                <label>Numero de cliente: <input></label> <label>Direccion de entrega: <input maxlength="150"></label>
                 <br>
                 <br>
                 <label>Fecha de carga: <input type="date"></label>
+                <br>
+                <br>
+                <label>Codigo Producto: <input>         Cant: <input></label>
+                <br>
+                <label>Codigo Producto: <input>         Cant: <input></label>
+                <br>
+                <label>Codigo Producto: <input>         Cant: <input></label>
+                <br>
+                <label>Codigo Producto: <input>         Cant: <input></label>
+                <br>
+                <label>Codigo Producto: <input>         Cant: <input></label>
+                <br>
+                <label>Codigo Producto: <input>         Cant: <input></label>
+                <br>
+                <label>Codigo Producto: <input>         Cant: <input></label>
+                <br>
 
             </form>
         </div>
