Se esta viendo como dejar clavado del datepicker de fecha de carga, ya que no puede ser modificada por el vendedor

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -15,7 +15,11 @@
                 <label>Numero de cliente: <input></label> <label>Direccion de entrega: <input maxlength="150"></label>
                 <br>
                 <br>
-                <label>Fecha de carga: <input type="date"></label>
+                <label>Fecha de carga: <input readonly type="date"  ></label>
+                 <!--ver como mostrar la fecha de hoy sin poder modificar-->
+                <br>
+                <br>
+                <label>Fecha de entrega: <input type="date"></label>
                 <br>
                 <br>
                 <label>Codigo Producto: <input>         Cant: <input></label>
