se agrego una web de consulta de pedidos cargadas por el vendedor, la misma devuelve pedidos segun cod cliente y permite modificar el pedido, excepto fecha de carga y agrega fecha de modificacion

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -36,6 +36,8 @@
                 <br>
                 <label>Codigo Producto: <input>         Cant: <input></label>
                 <br>
+                <br>
+                <button type="submit">Cargar</button> <a href="verpedidos.html"><button  type="button">Consultar</button>
 
             </form>
         </div>
