Se agrega Multine de Observaciones en cargapedido

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -37,6 +37,11 @@
                 <label>Codigo Producto: <input>         Cant: <input></label>
                 <br>
                 <br>
+                <label>Observaciones:   
+                    <br>
+                                    <textarea name="textarea" style="width:250px;height:150px;"></textarea></label> <!-- Multilinea para campo observaciones-->
+                <br>
+                <br>
                 <button type="submit">Cargar</button> <a href="verpedidos.html"><button  type="button">Consultar</button>
 
             </form>
