Se cambia propiedades de multilinea con CSS

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -39,7 +39,7 @@
                 <br>
                 <label>Observaciones:   
                     <br>
-                                    <textarea name="textarea" style="width:250px;height:150px;"></textarea></label> <!-- Multilinea para campo observaciones-->
+                                    <textarea class="multilinea-obs" name="textarea";></textarea></label> <!-- Multilinea para campo observaciones-->
                 <br>
                 <br>
                 <button type="submit">Cargar</button> <a href="verpedidos.html"><button  type="button">Consultar</button>
