cambios en las imagenes y paddins

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<HTML lang="en"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
+<HTML lang="es"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
   
     <head>      
       <link  rel="stylesheet" href="./style/esilotproyecto.css"> 
