--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<HTML lang="en"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
+<HTML lang="español"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
   
     <head>      
       <link  rel="stylesheet" href="./style/esilotproyecto.css"> <!--Llamada al file de css de proyect para todo el index importante agregar en el head y la ruta ./style/archivo css-->
@@ -10,9 +10,10 @@
       <h1 style="text-align: center;">Catalogo de PRODUCTOS</h1>
       <h4 style="text-align: center;">Proyecto de catalago para presentar</h4>
       <main>
-        <h3 style="text-align: left;">Productos</h3>
         <br>
         <br>
+        <br>
+        <h3 style="text-align: center; font-size: x-large; font: optional;">Productos</h3>
         <br>
         <div>
           <!-- agrega prod con descripcion e imagenes -->
@@ -34,7 +35,7 @@
           
           <article class = "productos-psag">
             <p class= "descripcion-prod">Rollo Felpita Profesional</p>          
-            <img class="img-prod" src="img/prods/4.jpeg" alt="No se puede mostrar la imagen">
+            <img class="img-prod" src="img/prods/2.jpeg" alt="No se puede mostrar la imagen">
           </article>
 
           <article class= "productos-psag-right">
@@ -60,7 +61,7 @@
         </div>
 
         <div style="text-align: center";>
-          <p style="font-size: xx-large;"> Acceso al formulario de carga de pedidos</p><a href="cargapedidos.html">
+          <p style="font-size: x-large;"> Acceso al formulario de carga de pedidos</p><a href="cargapedidos.html">
           <button class= "boton-carga" type="button">Ir</button></a>
         </div>  
         
