--- a/Proyecto/verpedidos.html
+++ b/Proyecto/verpedidos.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 
-<HTML lang="en"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
+<HTML lang="español"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
   
     <head>      
       <link  rel="stylesheet" href="./style/esilotproyecto.css"> <!--Llamada al file de css de proyect para todo el index importante agregar en el head y la ruta ./style/archivo css-->
     </head>
 
     <body>
+      <br>
+      <br>
         <labe>Ingrese el Codigo de cliente a Consultar: <input></labe>
         <!--hasta ver JS loopea sobre si misma-->
         <a href="verpedidos.html"><button  type="button">Consultar</button>
