MOdifacion para recordar ver grid o flexbox

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -15,8 +15,9 @@
         <br>
         <h3 style="text-align: center; font-size: x-large; font: optional;">Productos</h3>
         <br>
-        <div>
-          <!-- agrega prod con descripcion e imagenes -->
+        <div class="container">
+          <!-- agrega prod con descripcion e imagenes Usar GRID o alternativas -->
+           <!--ver realtive left 50%-->
           
           <article class= "productos-psag-right">
             <p class= "descripcion-prod">Rollo Felpita x 6 Extra suave</p>          
