--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -16,7 +16,7 @@
         <h3 style="text-align: center; font-size: x-large; font: optional;">Productos</h3>
         <br>
         <div class="container">
-          <!-- agrega prod con descripcion e imagenes Usar GRID o alternativas -->
+          <!-- agrega prod con descripcion e imagenes Usar GRID o Flex -->
            <!--ver realtive left 50%-->
           
           <article class= "productos-psag-right">
