grid template column

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -17,7 +17,7 @@
         <br>
         <div class="container">
           <!-- agrega prod con descripcion e imagenes Usar GRID o Flex -->
-           <!--ver realtive left 50%-->
+           <!--ver grid template column= 1fr 1fr (dos columnas)-->
           
           <article class= "productos-psag-right">
             <p class= "descripcion-prod">Rollo Felpita x 6 Extra suave</p>          
