--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -15,11 +15,11 @@
         <br>
         <h3 style="text-align: center; font-size: x-large; font: optional;">Productos</h3>
         <br>
-        <div class="container">
+        <div>
           <!-- agrega prod con descripcion e imagenes Usar GRID o Flex -->
            <!--ver grid template column= 1fr 1fr (dos columnas)-->
           
-          <article class= "productos-psag-right">
+          <article class= "productos-psag">
             <p class= "descripcion-prod">Rollo Felpita x 6 Extra suave</p>          
             <img class="img-prod" src="img/prods/1.jpeg" alt="No se puede mostrar la imagen">
           </article>
@@ -29,7 +29,7 @@
             <img class="img-prod" src="img/prods/2.jpeg" alt="No se puede mostrar la imagen">
           </article>
 
-          <article class= "productos-psag-right">
+          <article class= "productos-psag">
             <p class= "descripcion-prod">Rollo Felpita Suavidad x 4</p>
             <img class="img-prod" src="img/prods/5.jpeg" alt="No se puede mostrar la imagen">
           </article>
@@ -39,26 +39,26 @@
             <img class="img-prod" src="img/prods/2.jpeg" alt="No se puede mostrar la imagen">
           </article>
 
-          <article class= "productos-psag-right">
+          <article class= "productos-psag">
             <p class= "descripcion-prod">Rollo Felpita infinity</p>          
             <img class="img-prod" src="img/prods/3.jpeg" alt="No se puede mostrar la imagen">
           </article>
 
-         
           <article class = "productos-psag">
             <p class= "descripcion-prod">Rollo Felpita x 6, 80 metros </p>          
             <img class="img-prod" src="img/prods/6.jpeg" alt="No se puede mostrar la imagen">
           </article>
 
-          <article class= "productos-psag-right">
+          <article class= "productos-psag">
             <p class= "descripcion-prod">Rollo Felpita infinity 30 metros</p>          
             <img class="img-prod" src="img/prods/7.jpeg" alt="No se puede mostrar la imagen">
           </article>
 
           <article class = "productos-psag">
-              <p class= "descripcion-prod">Rollo Felpita algodon</p>          
-              <img class="img-prod" src="img/prods/8.jpeg" alt="No se puede mostrar la imagen">
+            <p class= "descripcion-prod">Rollo Felpita algodon</p>
+            <img class="img-prod" src="img/prods/8.jpeg" alt="No se puede mostrar la imagen">
           </article>
+
         </div>
 
         <div style="text-align: center";>
