se agregaron los logos y centraron

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -9,8 +9,11 @@
 
     <body>
       <div class="top-intro">
-        <img class="logo-psag" src="./img/prods/logo 2017.jpg" alt="No se puede mostrar la imagen">
-        <h1 >Catalogo de PRODUCTOS</h1>
+        <div class="imagenes-logo">
+          <img class="logo-psag" src="./img/prods/logo 2017.jpg" alt="No se puede mostrar la imagen">
+          <img class="logo-felpita" src="./img/prods/felpitalogo.jpeg" alt="No se puede mostrar la imagen">
+        </div>
+        <h1 >Catalogo de Productos</h1>
         <br>
         <h4 >Proyecto de catalago para presentar</h4>
       </div> 
