Pelea con el menu y su diagramacion

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -19,7 +19,7 @@
         <nav class="menu-foot">
           <ul>
             <li class="li-menu">
-              <a  href="cargapedidos.html">Carga Avanzada de Pedidos</a>
+              <a  href="cargapedidos.html">Carga Avanzada de Pedidos</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
             </li>
             <li class="li-menu">
              <a  href="verpedidos.html">Consulta Pedidos</a>
