--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -10,12 +10,12 @@
     <body>
         <div class="top-intro">
         <div class="imagenes-logo">
-          <img class="logo-psag" src="./img/prods/logo 2017.jpg" alt="Imagen no disponible">
+          <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
           <div class="textos-header">
             <h1 class="txt-head">Catálogo de Productos</h1>
             <h4 class="txt-head">Proyecto de catálogo para presentar</h4>
           </div>
-          <img class="logo-psag" src="./img/prods/felpitalogo.jpeg" alt="Imagen no disponible">
+          <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
         </div>
           <nav class="menu-foot">
             <ul>
