--- a/Proyecto/nuevosproductos.html
+++ b/Proyecto/nuevosproductos.html
@@ -4,7 +4,9 @@
     
 </head>
 <body>
-    <h4>.... Web en construccion, disculpe las molestias 
-        <img style="display: block; align-items: center;" src="img/logo_2017.png" alt="construccion"></h4>
+    <h4>.... Web en construccion, disculpe las molestias </h4>
+    <br>
+    <br>
+        <img style="display: block; align-items: center;" src="img/logo_2017.png" alt="construccion">
 </body>
 </html>
