update de form y botones cargapedidos

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -44,29 +44,12 @@
       <main>
         <div class="container-carga-pedidos">
         <form class="formulario-pedidos" method="post" autocomplete="on">
-          <br>
-          <br>
           <div class="label-datos">
-            <label>Numero de cliente: <input></label>
-          </div>
-          <br>
-          <br>
-          <div class="label-datos">
+            <label>Numero de cliente:    <input></label>
             <label>Direccion de entrega: <input maxlength="100"></label>
-          </div>
-          <br>
-          <br>
-          <div class="label-datos">
-            <label>Numero de pedido: <input></label>
-          </div>
-          <br>
-          <br>
-          <div class="fecha-carga">
-          <label>Fecha de carga: <input id="date-fecha-carga" readonly type="date"></label>
-          </div>
-          <br>
-          <div class="label-datos">
-           <label>Fecha de entrega: <input id="date-fecha-entrega" type="date"></label>
+            <label>Numero de pedido:     <input></label>
+            <label>Fecha de carga:       <input id="date-fecha-carga" readonly type="date"></label>
+            <label>Fecha de entrega:     <input id="date-fecha-entrega" type="date"></label>
           </div>
           <br>
           <div class="carga-pedidos-data">
@@ -83,10 +66,10 @@
           <br>
           <br>
           <div id="observaciones-multilinea"></div>
-            <label>Observaciones:   
+            <label style="font-weight: bold;">Observaciones:   
             <br>
             <!-- Multilinea para campo observaciones-->
-            <textarea class="multilinea-obs" name="textarea" style="height: 100px; width: 600px;"></textarea>
+            <textarea class="multilinea-obs" name="textarea" style="height: 100px; width: 600px; margin-top: 10px;"></textarea>
           </label>
           <br>
           <br>
