--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -5,6 +5,8 @@
     <head>      
       <link  rel="stylesheet" href="./style/esilotproyecto.css"> 
       <!--Llamada al file de css de proyect para todo el index importante agregar en el head y la ruta ./style/archivo css-->
+      <script src="./Scripts/scripts.js""></script> <!--activar js-->
+    
     </head>
 
     <body>
