--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -28,18 +28,18 @@
               <a  href="verpedidos.html">Consulta Pedidos</a>
               </li>
               <li class="li-menu">
-                <a  href="nostros.html">Nosotros</a>
+                <a  href="nostros.html".html">Nosotros</a>
               </li>
               <li class="li-menu">
                 <a href="contacto.html">Contacto</a>
               </li>
               <li class="li-menu">
-                <a href="nuevoproductos.html">Nuevos Productos</a>
+                <a href="nuevosproductos.html">Nuevos Productos</a>
               </li>
             </ul>
           </nav>
         </div>
-        <div class="separador-header"></div>
+        
         
         <main>
           <br>
