--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -46,9 +46,9 @@
                     <br>
                     <div class="carga-pedidos-data">
 
-                        <label>Numero de cliente: <input></label>
-                        <label>Direccion de entrega: <input maxlength="100"></label>
-                        <label>Numero de pedido: <input></label>
+                        <label class="Lbl-form">Numero de cliente: <input></label>
+                        <label class="Lbl-form">Direccion de entrega: <input maxlength="100"></label>
+                        <label class="Lbl-form">Numero de pedido: <input></label>
 
                     </div> 
                     
