re generacion de menues por que no sincronizo git

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -10,11 +10,11 @@
     </head>
 
     <body>
-        <div class="top-intro">
+      <div class="top-intro">
         <div class="imagenes-logo">
           <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
           <div class="textos-header">
-            <h1 class="txt-head">Catálogo de Productos</h1>
+            <h1 class="txt-head">Carga Avanzada de Pedidos</h1>
             <h4 class="txt-head">Proyecto de catálogo para presentar</h4>
           </div>
           <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
@@ -22,13 +22,13 @@
           <nav class="menu-foot">
             <ul>
               <li class="li-menu">
-                <a  href="cargapedidos.html">Carga Avanzada de Pedidos</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
+                <a  href="cargapedidos.html">Carga avanzada de Pedidos</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
               </li>
               <li class="li-menu">
               <a  href="verpedidos.html">Consulta Pedidos</a>
               </li>
               <li class="li-menu">
-                <a  href="nostros.html".html">Nosotros</a>
+                <a  href="nostros.html">Nosotros</a>
               </li>
               <li class="li-menu">
                 <a href="contacto.html">Contacto</a>
@@ -38,7 +38,7 @@
               </li>
             </ul>
           </nav>
-        </div>
+      </div>
         
         
         <main>
