--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -8,12 +8,12 @@
     </head>
 
     <body>
-        <!-- <img src="./img/prods/felpitalogo.jpeg">    imagen horrible-->      
-      <div class="top-intro">
+      <!-- <img src="./img/prods/felpitalogo.jpeg">    imagen horrible-->      
+      <div class="top-intro-pedidos">
         <div class="imagenes-logo">
           <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
           <div class="textos-header">
-            <h1 class="txt-head">Catálogo de Productos</h1>
+            <h1 class="txt-head">Carga Avanzada de Pedidos</h1>
             <h4 class="txt-head">Proyecto de catálogo para presentar</h4>
           </div>
           <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
@@ -21,7 +21,7 @@
           <nav class="menu-foot">
             <ul>
               <li class="li-menu">
-                <a  href="cargapedidos.html">Carga Avanzada de Pedidos</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
+                <a  href="index.html">Catalogo</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
               </li>
               <li class="li-menu">
               <a  href="verpedidos.html">Consulta Pedidos</a>
@@ -37,7 +37,7 @@
               </li>
             </ul>
           </nav>
-        </div>
+      </div>
         
         <main>
             <!-- <img style=" float:right;" src="./img/prods/felpitalogo.jpeg">    imagen horrible-->
