Listo re organizacion de header y menus.

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -43,14 +43,14 @@
         
         <main>
           <br>
-          <aside style="position: left;">
+          <aside class= "menu-lateral">
             <label>Buscar:</label>
             <br>
-            <input type="search";>
+            <input type="search">
             
             <div>
               <br>
-              <label style="margin-top: 4%;";>Familia de Productos:</label>
+              <label style="margin-top: 4%;">Familia de Productos:</label>
               <ul class="chkbox-familia">
                 <li> <input type="checkbox"> <label>Papel Higienico</label> </li>
                 <li> <input type="checkbox"> <label>Rollo de Cocina</label> </li>
