--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -9,7 +9,7 @@
 
     <body>
       <!-- <img src="./img/prods/felpitalogo.jpeg">    imagen horrible-->      
-      <div class="top-intro-pedidos">
+      <div class="top-intro">
         <div class="imagenes-logo">
           <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
           <div class="textos-header">
