se logro poner el date now en el script de carga de pedidos se tuvo que generar un nuevo archivo JS por que si no rompia el script de catalogo

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -27,7 +27,7 @@
               <a  href="verpedidos.html">Consulta Pedidos</a>
               </li>
               <li class="li-menu">
-                <a  href="nostros.html".html">Nosotros</a>
+                <a  href="nostros.html">Nosotros</a>
               </li>
               <li class="li-menu">
                 <a href="contacto.html">Contacto</a>
@@ -54,7 +54,7 @@
                     
                     <div id="datepicker-fechas-pedido">
                       
-                      <label>Fecha de carga: <input id="date-fecha-carga" readonly type="date"></label>
+                      <label >Fecha de carga: <input type="date"  readonly="true" id="fecha-actual"></label>
                       <!--ver como mostrar la fecha de hoy sin poder modificar-->
                       <label>Fecha de entrega: <input id="date-fecha-entrega" type="date"></label>
                     </div>
@@ -93,6 +93,6 @@
         </footer>
 
     </body>
-    <script src="./Scripts/app.js"></script> <!--activar js-->
+    <script src="Script/cargaped.js"></script>  <!--activar js-->
 
 </html>
