--- a/clase1/index.html
+++ b/clase1/index.html
@@ -17,7 +17,7 @@
         <!---aca va un comentario de prueba -->
         <div>
             <h6>PRODUCTOS</h6> 
-            <ol>
+            <ul>
                 <li class="prueba">Producto 1</li>
                 <li class="prueba">Producto 2</li>
                 <li class="prueba">Producto 3</li>
@@ -26,7 +26,7 @@
                 <li class="prueba">Producto 6</li>
                 <li >Verificacion de Commit y push con cambio de producto en lista</li>
                 <li class="prueba">Otro Cambio</li>
-            </ol>
+            </ul>
         </div>
 
 
@@ -60,6 +60,19 @@
     
         </table>
         <a href="./formularioPrueba.html">Ir a Formulario</a>
+
+        <ul>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+        </ul>
+        
+        <!-- Lista ordenada (<b>) -->
+        <ol>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+        </ol>
 
 
 
