cambio tipo UL por OL

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -53,12 +53,12 @@
             <div>
               <br>
               <label style="margin-top: 4%;">Familia de Productos:</label>
-              <ul class="chkbox-familia">
+              <ol class="chkbox-familia">
                 <li> <input id="chk-ph" type="checkbox"> <label>Papel Higienico</label> </li>
                 <li> <input id="chk-rc" type="checkbox"> <label>Rollo de Cocina</label> </li>
                 <li> <input id="chk-serv" type="checkbox"> <label>Servilletas</label> </li>
                 <li> <input id="chk-inst" type="checkbox"> <label>Institucionales</label> </li>
-              </ul>
+              </ol>
             </div>
 
 
