--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -69,6 +69,6 @@
         </footer>
     </body>
     
-  <script src="script/cargaped.js"></script>  <!--activar js-->
+  <script src="./script/cargaped.js"></script>  <!--activar js-->
 
 </html>
