--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -62,7 +62,7 @@
         </footer>
     </body>
 
-     <script src="script/app.js"></script>  <!--activar js-->
+     <script src="./script/app.js"></script>  <!--activar js-->
    
 
 </HTML>
