--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    
+    <link rel="stylesheet" href="./style/estilocontacto.css">
 </head>
 <body>
     <h4>.... Web en construccion, disculpe las molestias </h4>
