Se creo el form para contacto con grid

--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -3,8 +3,9 @@
 <HTML lang="es"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
   
     <head>      
-      <link rel="stylesheet" href="./style/esilotproyecto.css"> 
-      <link rel="stylesheet" href="./style/esilotproyecto.css">
+      <link rel="stylesheet" href="./style/cargaPedidos.css">
+      <link rel="stylesheet" href="./style/contacto.css">
+      <link rel="stylesheet" href="./style/proyecto.css">
     </head>
     <body>
       <div class="top-intro">
