--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -3,7 +3,7 @@
 <HTML lang="es"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
   
     <head>      
-      <link  rel="stylesheet" href="./style/esilotproyecto.css"> 
+      <link  rel="stylesheet" href="./style/proyecto.css"> 
       <!--Llamada al file de css de proyect para todo el index importante agregar en el head y la ruta ./style/archivo css-->
       </head>
     <body >
