--- a/Proyecto/verpedidos.html
+++ b/Proyecto/verpedidos.html
@@ -2,18 +2,54 @@
 
 <HTML lang="español"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
   
-    <head>      
-      <link  rel="stylesheet" href="./style/esilotproyecto.css"> <!--Llamada al file de css de proyect para todo el index importante agregar en el head y la ruta ./style/archivo css-->
-    </head>
+  <head>      
+    <link rel="stylesheet" href="./style/cargaPedidos.css">
+    <link rel="stylesheet" href="./style/contacto.css">
+    <link rel="stylesheet" href="./style/proyecto.css">
+  </head>
+  <body>
+    <main>
+      <div class="top-intro">
+        <div class="imagenes-logo">
+          <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
+          <div class="textos-header">
+            <h1 class="txt-head">Consulta Pedidos Realizados</h1>
+            <h4 class="txt-head">Proyecto de catálogo para presentar</h4>
+          </div>
+          <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
+        </div>
+          <nav class="menu-foot">
+            <ul>
+              <li class="li-menu">
+                <a  href="index.html">Catalogo</a>
+              </li>
+              <li class="li-menu">
+              <a  href="verpedidos.html">Consulta Pedidos</a>
+              </li>
+              <li class="li-menu">
+                <a  href="nostros.html">Nosotros</a>
+              </li>
+              <li class="li-menu">
+                <a href="contacto.html">Contacto</a>
+              </li>
+              <li class="li-menu">
+                <a href="nuevosproductos.html">Nuevos Productos</a>
+              </li>
+            </ul>
+          </nav>
+      </div>
+      <div class="consulta-pedidos-top">      
+        <h3 style="padding-top: 25vh; text-align: center;font-size: xx-large;">Busqueda de Pedido cargado</h3>
+        <div id="grid-busqueda-pedido">
+            
+      </div>
+    </main>
 
-    <body>
-      <br>
-      <br>
-        <labe>Ingrese el Codigo de cliente a Consultar: <input></labe>
-        <!--hasta ver JS loopea sobre si misma-->
-        <a href="verpedidos.html"><button  type="button">Consultar</button>
 
 
-
-
-    </body>
+    <footer>
+     <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
+     <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
+    </footer>
+  </body>
+  </HTML>
