--- a/Proyecto/nostros.html
+++ b/Proyecto/nostros.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    
+    <link rel="stylesheet" href="./style/proyecto.css">
+    <link rel="stylesheet" href="./style/nosotros.css">    
 </head>
-<body>
-    <h4>.... Web en construccion, disculpe las molestias </h4>
-    <br>
-    <br>
-        <img style="display: block; align-items: center;" src="img/logo_2017.png" alt="construccion">
-</body>
+     <body >
+        <div class="top-intro">
+          <div class="imagenes-logo">
+            <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
+            <div class="textos-header">
+              <h1 class="txt-head">Carga Avanzada de Pedidos</h1>
+              <h4 class="txt-head "> "Proyecto de catálogo para presentar"</h4>
+            </div>
+            <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
+          </div>
+            <nav class="menu-foot">
+              <ul>
+                <li class="li-menu">
+                  <a href="cargapedidos.html">Carga avanzada de Pedidos</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
+                </li>
+                <li class="li-menu">
+                <a href="verpedidos.html">Consulta Pedidos</a>
+                </li>
+                <li class="li-menu">
+                  <a href="nostros.html">Nosotros</a>
+                </li>
+                <li class="li-menu">
+                  <a href="contacto.html">Contacto</a>
+                </li>
+                <li class="li-menu">
+                  <a href="nuevosproductos.html">Nuevos Productos</a>
+                </li>
+              </ul>
+            </nav>
+        </div>
+        <div id="contenido-nostros">
+            <div id="institucional">
+                <h1>Nosotros</h1>
+                <p>Somos una empresa dedicada a la fabricación y distribución de productos de papel higiénico, rollos de cocina, servilletas e institucionales.</p>
+                <p>Nuestra misión es ofrecer productos de alta calidad y satisfacer las necesidades de nuestros clientes.</p>
+                <p>Contamos con un equipo altamente capacitado y comprometido con la excelencia en el servicio.</p>
+                <p>Si deseas más información sobre nosotros, no dudes en <a href="contacto.html">contactarnos</a></p>
+            </div>
+        </div>
+    </body>
 </html>
