--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -10,7 +10,7 @@
         <div class="imagenes-logo">
           <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
           <div class="textos-header">
-            <h1 class="txt-head">Carga Avanzada de Pedidos</h1>
+            <h1 class="txt-head">Contactenos</h1>
             <h4 class="txt-head "> "Proyecto de catálogo para presentar"</h4>
         </div>
           <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
