--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -11,7 +11,7 @@
         <div class="imagenes-logo">
           <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
           <div class="textos-header">
-            <h1 class="txt-head">Carga Avanzada de Pedidos</h1>
+            <h1 class="txt-head">Catalogo de Productos</h1>
             <h4 class="txt-head "> "Proyecto de catálogo para presentar"</h4>
           </div>
           <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
