modificacion nuevos productos

--- a/Proyecto/nuevosproductos.html
+++ b/Proyecto/nuevosproductos.html
@@ -4,9 +4,9 @@
     
 </head>
 <body>
-    <h4>.... Web en construccion, disculpe las molestias </h4>
+    <h4 style="padding-top: 10vh;">.... Web en construccion, disculpe las molestias </h4>
     <br>
     <br>
-        <img style="display: block; align-items: center;" src="img/logo_2017.png" alt="construccion">
+        <img style="display: block; align-items: center; width: 50vh; height: 20vh;;" src="img/logo_2017.png" alt="construccion">
 </body>
 </html>
