edicion verpedidos responsive

--- a/Proyecto/verpedidos.html
+++ b/Proyecto/verpedidos.html
@@ -61,7 +61,7 @@
                 <th>Estado</th>
               </tr>
             </thead>
-            <tbody id="tbody-resultados">
+            <tbody>
               <tr>
                 <td>12345</td>
                 <td>Juan Perez</td>
@@ -72,7 +72,25 @@
                 <td>67890</td>
                 <td>Carlos Alvarez</td>
                 <td>12/03/2025</td>
+                <td>Completado</td>                
+              </tr>
+              <tr>
+                <td>54321</td>
+                <td>Maria Lopez</td>
+                <td>15/02/2025</td>
+                <td>En Proceso</td>
+              </tr>
+              <tr>
+                <td>98765</td>
+                <td>Pedro Gonzalez</td>
+                <td>20/01/2025</td>
                 <td>Completado</td>
+              </tr>
+              <tr>
+                <td>13579</td>
+                <td>Ana Torres</td>
+                <td>25/12/2024</td>
+                <td>En Proceso</td>
               </tr>              
             </tbody>
           </table>
