Modificacion de verpedidos

--- a/Proyecto/nostros.html
+++ b/Proyecto/nostros.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="./style/proyecto.css">
-    <link rel="stylesheet" href="./style/nosotros.css">    
+    <link rel="stylesheet" href="./style/nostros.css">    
 </head>
      <body >
         <div class="top-intro">
