--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -1,61 +1,57 @@
 <!DOCTYPE html>
 
-<HTML lang="es"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
-  
-    <head>      
-      <link  rel="stylesheet" href="./style/proyecto.css"> 
-      <!--Llamada al file de css de proyect para todo el index importante agregar en el head y la ruta ./style/archivo css-->
-    </head>
-    <body>
-      <div class="top-intro">
-        <div class="imagenes-logo">
-          <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
-          <div class="textos-header">
-            <h1 class="txt-head">Catalogo de Productos</h1>
-            <h4 class="txt-head "> "Proyecto de catálogo para presentar"</h4>
-          </div>
-          <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
+<HTML lang="es">  
+  <head>      
+    <link  rel="stylesheet" href="./style/proyecto.css">       
+  </head>
+  <body>
+    <div class="top-intro">
+      <div class="imagenes-logo">
+        <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
+        <div class="textos-header">
+          <h1 class="txt-head">Portal de Productos PSAG</h1>            
         </div>
-          <nav class="menu-foot">
-            <ul>
-              <li class="li-menu">
-                <a href="cargapedidos.html">Carga avanzada de Pedidos</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
-              </li>
-              <li class="li-menu">
+        <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
+      </div>
+        <nav class="menu-foot">
+          <ul>
+            <li class="li-menu">
+              <a href="cargapedidos.html">Carga avanzada de Pedidos</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
+            </li>
+            <li class="li-menu">
               <a href="verpedidos.html">Consulta Pedidos</a>
-              </li>
-              <li class="li-menu">
-                <a href="nostros.html">Nosotros</a>
-              </li>
-              <li class="li-menu">
-                <a href="contacto.html">Contacto</a>
-              </li>              
-            </ul>
-          </nav>
+            </li>
+            <li class="li-menu">
+              <a href="nostros.html">Nosotros</a>
+            </li>
+            <li class="li-menu">
+              <a href="contacto.html">Contacto</a>
+            </li>              
+          </ul>
+        </nav>
       </div>
       <main>
-          <br>
-          <aside class= "menu-lateral">
-            <label id="lbl-buscar" style="margin-top: 4%;margin-bottom: 2%;">Buscar:</label>
-            <input id="busqueda-prod" style="margin-bottom: 5px;" type="search">
-            <div>
-              <label style="margin-top: 2%;">Familia de Productos:</label>
-              <ul class="chkbox-familia">
-                <li> <input id="chk-ph" type="checkbox"> <label>Papel Higienico</label> </li>
-                <li> <input id="chk-rc" type="checkbox"> <label>Rollo de Cocina</label> </li>
-                <li> <input id="chk-serv" type="checkbox"> <label>Servilletas</label> </li>
-                <li> <input id="chk-inst" type="checkbox"> <label>Institucionales</label> </li>
-              </ul>
-            </div></aside>
-          <div class="prod-container"></div>
-          <button id="btn-add-products" class="boton-carga" type="button">Agregar Nuevo Producto</button>
-        </main>
-        <br>
-        <br>
-        <footer>
-        <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
-          <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
-        </footer>
+        <aside class= "menu-lateral">
+          <label id="lbl-buscar">Buscar:</label>
+          <input id="busqueda-prod" type="search">
+          <div>            
+            <ul class="chkbox-familia">
+              <li> <input id="chk-ph" type="checkbox"> <label>Papel Higienico</label> </li>
+              <li> <input id="chk-rc" type="checkbox"> <label>Rollo de Cocina</label> </li>
+              <li> <input id="chk-serv" type="checkbox"> <label>Servilletas</label> </li>
+              <li> <input id="chk-inst" type="checkbox"> <label>Institucionales</label> </li>
+            </ul>
+          </div>
+        </aside>
+      <div class="prod-container"></div>
+      <button id="btn-add-products" class="boton-carga" type="button">Agregar Nuevo Producto</button>
+      </main>
+      <br>
+      <br>
+      <footer>
+      <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
+      <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
+      </footer>
     </body>
     <script src="./script/app.js"></script>  <!--activar js-->
 </HTML>
