9se agrego carrito se modifico el enterno de la pagina se encuadro e hizo responsive

--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -2,8 +2,7 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="./style/cargaPedidos.css">
-    <link rel="stylesheet" href="./style/contacto.css">
-    <link rel="stylesheet" href="./style/proyecto.css">
+    <link rel="stylesheet" href="./style/contacto.css">    
 </head>
 <body>
     <div class="top-intro">
@@ -17,7 +16,7 @@
           <nav class="menu-foot">
             <ul>
               <li class="li-menu">
-                <a href="index.html">Catalogo</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
+                <a href="index.html">Catalogo</a>
               </li>
               <li class="li-menu">
               <a href="verpedidos.html">Consulta Pedidos</a>
@@ -27,16 +26,12 @@
               </li>
               <li class="li-menu">
                 <a href="contacto.html">Contacto</a>
-              </li>
-              <li class="li-menu">
-                <a href="nuevosproductos.html">Nuevos Productos</a>
-              </li>
+              </li>              
             </ul>
           </nav>
         </div>
         <div>
-            <!-- <img class="img-institucional" src="./img/psag-300x160.jpg" alt="Imagen no disponible"> -->
-        <form>
+          <form>
             <div id="form-contacto">
             <h1 >Contactenos</h1>
             <br>
