--- a/Proyecto/cargapedidos.html
+++ b/Proyecto/cargapedidos.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 
-<HTML lang="es"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
-  
+<HTML lang="es">
     <head>      
       <link rel="stylesheet" href="./style/cargaPedidos.css">
-      <link rel="stylesheet" href="./style/contacto.css">
-      <link rel="stylesheet" href="./style/proyecto.css">
+      <link rel="stylesheet" href="./style/contacto.css">      
     </head>
     <body>
       <div class="top-intro">
         <div class="imagenes-logo">
           <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
           <div class="textos-header">
-            <h1 class="txt-head">Carga Avanzada de Pedidos</h1>
-            <h4 class="txt-head">Proyecto de catálogo para presentar</h4>
+            <h1 class="txt-head">Carga Avanzada de Pedidos</h1>            
           </div>
           <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
         </div>
@@ -42,7 +39,7 @@
                 <label class="Lbl-form">Numero de cliente: <input></label>
                 <label class="Lbl-form">Direccion de entrega: <input maxlength="100"></label>
                 <label class="Lbl-form">Numero de pedido: <input></label>
-                </div>
+              </div>
               <div id="datepicker-fechas-pedido">
                 <label >Fecha de carga: <input type="date"  readonly="true" id="fecha-actual"></label>
                 <label>Fecha de entrega: <input id="date-fecha-entrega" type="date"></label>
