--- a/Proyecto/nostros.html
+++ b/Proyecto/nostros.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="./style/proyecto.css">
+    
     <link rel="stylesheet" href="./style/nostros.css">    
 </head>
      <body >
@@ -9,8 +9,7 @@
           <div class="imagenes-logo">
             <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
             <div class="textos-header">
-              <h1 class="txt-head">Papelera San Andres de Giles</h1>
-              <h4 class="txt-head ">Acerca de nostros</h4>
+              <h1 class="txt-head">Papelera San Andres de Giles</h1>              
             </div>
             <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
           </div>
@@ -40,5 +39,9 @@
                 <p>Si deseas más información sobre nosotros, no dudes en <a href="contacto.html">contactarnos</a></p>
             </div>
         </div>
+      <footer>
+      <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
+      <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
+      </footer>
     </body>
 </html>
