--- a/Proyecto/verpedidos.html
+++ b/Proyecto/verpedidos.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 
 <HTML lang="es"> <!-- Al setearlo el navegador me sugiere traduccion al español, como el S.O nativo-->
-  
-  <head>      
-    <link rel="stylesheet" href="./style/verpedidos.css">
-    <link rel="stylesheet" href="./style/proyecto.css" >   
+    <head>      
+    <link rel="stylesheet" href="./style/verpedidos.css">    
   </head>
   <body>
     <main>
@@ -35,7 +33,7 @@
       </div>
       <div class="separador-header"></div>
       <div class="consulta-pedidos-top">      
-        <h3 style="font-size: xx-large;">Busqueda de Pedido cargado</h3>
+        <h3 style="font-size: xx-large; padding-bottom: 40px;">Busqueda de Pedido cargado</h3>
         <div id="flex-busqueda-pedido">
           <label>Ingrese el número de pedido:</label>
           <input id="busqueda-pedido" type="text">
@@ -45,11 +43,11 @@
           <input id="busqueda-fecha" type="date">
           <button id="btn-buscar-pedido" class="boton-carga" type="submit">Buscar</button>
         </div> 
-      </div>
+      </div>      
         <div class="consulta-pedidos-bottom">
         <div id="flex-resultados-pedido">
-          <table id="tabla-resultado">
-            <h4 style="text-align: center;">Resultado</h4>
+          <h2 style="text-align: center;">Resultado</h4>
+          <table id="tabla-resultado">            
             <thead>
               <tr>
                 <th>Pedido</th>
