hover sobre descripcion de cards

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -39,10 +39,10 @@
           <input id="busqueda-prod" type="search">
           <div>            
             <ul class="chkbox-familia">
-              <li> <input id="chk-ph" type="checkbox"> <label>Papel Higienico</label> </li>
-              <li> <input id="chk-rc" type="checkbox"> <label>Rollo de Cocina</label> </li>
-              <li> <input id="chk-serv" type="checkbox"> <label>Servilletas</label> </li>
-              <li> <input id="chk-inst" type="checkbox"> <label>Institucionales</label> </li>
+              <li> <input id="chk-ph" type="checkbox" value="ph"> <label for="chk-ph">Papel Higiénico</label> </li>
+              <li> <input id="chk-rc" type="checkbox" value="rc"> <label for="chk-rc">Rollo de Cocina</label> </li>
+              <li> <input id="chk-serv" type="checkbox" value="serv"> <label for="chk-serv">Servilletas</label> </li>
+              <li> <input id="chk-inst" type="checkbox" value="inst"> <label for="chk-inst">Institucionales</label> </li>
             </ul>
           </div>
         </aside>
