--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -25,7 +25,10 @@
             </li>
             <li class="li-menu">
               <a href="contacto.html">Contacto</a>
-            </li>        
+            </li>
+            <li class="li-menu">
+              <a href="altaproducto.html">Alta Producto</a>
+            </li>          
           </ul>
         </nav>
       </div>
