se generaron los Js para traer prod para poder editarlos o eliminarlos

--- a/Proyecto/altaproducto.html
+++ b/Proyecto/altaproducto.html
@@ -19,7 +19,7 @@
               <a href="index.html">Catalogo</a>
             </li>
             <li class="li-menu">
-              <a href="verpedidos.html">Consulta Pedidos</a>
+              <a href="adminProd.html">Administrador de Productos</a>
             </li>
             <li class="li-menu">
               <a href="nostros.html">Nosotros</a>
@@ -28,7 +28,7 @@
               <a href="contacto.html">Contacto</a>
             </li>        
           </ul>
-        </nav>
+        </nav>       
       </div>
       <main>
       <h2 id="addprod">Agregar Nuevo Producto</h2>
