--- a/Proyecto/verpedidos.html
+++ b/Proyecto/verpedidos.html
@@ -20,7 +20,7 @@
                 <a  href="index.html">Catalogo</a>
               </li>
               <li class="li-menu">
-              <a  href="verpedidos.html">Consulta Pedidos</a>
+              <a  href="altaproducto.html">Alta de Productos</a>
               </li>
               <li class="li-menu">
                 <a  href="nostros.html">Nosotros</a>
