se creo login.html para validar y de ahi ira a la admin de productos sin que quede expuesta por el index

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -27,7 +27,7 @@
               <a href="contacto.html">Contacto</a>
             </li>
             <li class="li-menu">
-              <a href="altaproducto.html">Alta Producto</a>
+              <a href="login.html">Administracion de Productos</a>
             </li>          
           </ul>
         </nav>
