--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -25,7 +25,7 @@
                 <a href="nostros.html">Nosotros</a>
               </li>
               <li class="li-menu">
-                <a href="contacto.html">Contacto</a>
+                <a href="login.html">Administracion de Productos</a>
               </li>              
             </ul>
           </nav>
