se hicieron modificaciones en los Js para resolver solicitudes

--- a/Proyecto/login.html
+++ b/Proyecto/login.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="./style/login.css">  
-    <script src="/Proyecto/Script/login.js" defer></script>  
+    <script src="./Script/login.js" defer></script>  
 </head>
      <body >
         <div class="top-intro">
