--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <HTML lang="es">  
   <head>      
-    <link  rel="stylesheet" href="./style/proyecto.css">       
+    <link  rel="stylesheet" href="./style/proyecto.css">   
+      <script src="./Script/app.js" defer></script>    
   </head>
   <body>
     <div class="top-intro">
@@ -52,6 +53,5 @@
       <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
       <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
       </footer>
-    </body>
-    <script src="./Script/app.js"></script>  <!--activar js-->
+      </body>
 </HTML>
